--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,12 +21,32 @@ jobs:
         username: ubuntu
         key: ${{ secrets.SSH_KEY }}
         script: |
-          cd /home/ubuntu/yolo-service || (git clone https://github.com/hamad-fyad/yolo-services.git  && cd yolo-service)
-          
-          # YOUR CODE HERE ... 
-          #  - get the updated code version from github
-          #  - install venv and dependencies if needed
-          #  - set up the Linux service
-          #  - restart the service
-        
-          echo "Deployment completed"
+          REPO_DIR=/home/ubuntu/YoloService
+          REPO_URL=https://github.com/hamad-fyad/YoloService.git
+
+          # Install Python 3, venv, and pip if not already installed
+          sudo apt update
+          sudo apt install -y python3 python3-venv python3-pip
+
+          # Clone the repo if it doesn't exist
+          if [ ! -d "$REPO_DIR" ]; then
+            git clone $REPO_URL $REPO_DIR
+          fi
+
+          cd $REPO_DIR
+          git pull origin main
+
+          # Setup virtual environment
+          if [ ! -d ".venv" ]; then
+            python3 -m venv .venv
+          fi
+
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          pip install -r torch-requirements.txt
+
+          # Restart the YOLO service
+          sudo systemctl daemon-reload
+          sudo systemctl enable yolo
+          sudo systemctl start yolo
+          sudo systemctl status yolo
