--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Run Tests
 
 on:
   pull_request:
-    branches: 
+    branches:
       - main
 
 jobs:
@@ -21,6 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r torch-requirements.txt
           pip install -r requirements.txt
           pip install pytest pytest-cov
@@ -28,9 +29,8 @@ jobs:
       - name: Run tests with coverage
         env:
           PIXABAY_API_KEY: ${{ secrets.PIXABAY_API_KEY }}
-          
         run: |
-          pytest --cov=app --cov-report=xml --cov-report=term-missing
+          pytest --cov=app --cov-report=term-missing --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -38,3 +38,9 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
           fail_ci_if_error: true
+
+      - name: Upload test results to Codecov 
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
