--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 testpaths = tests
-addopts = --cov=app --cov-report=html --cov-report=xml --cov-report=term-missing --strict-markers
+addopts = --cov=app --cov=tests --cov-report=html --cov-report=xml --cov-report=term-missing --strict-markers
+
