--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,13 +24,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r torch-requirements.txt
           pip install -r requirements.txt
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov allure-pytest   # ✅ added allure-pytest
 
-      - name: Run tests with coverage
+      - name: Run tests with coverage + Allure
         env:
           PIXABAY_API_KEY: ${{ secrets.PIXABAY_API_KEY }}
         run: |
-          pytest --cov=app --cov-report=term-missing --cov-report=xml
+          pytest --cov=app \
+                 --cov-report=term-missing \
+                 --cov-report=xml \
+                 --alluredir=allure-results   # ✅ generate allure results
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -44,3 +47,65 @@ jobs:
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload Allure results as artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-results
+          path: allure-results/
+          retention-days: 30
+
+  allure-report:
+    runs-on: ubuntu-latest
+    needs: test   # ✅ depends on the test job
+    if: always()
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Download all Allure results
+        uses: actions/download-artifact@v4
+        with:
+          pattern: allure-results*
+          path: allure-results-downloaded
+          merge-multiple: false
+
+      - name: Merge all results into single directory
+        run: |
+          mkdir -p allure-results
+          for dir in allure-results-downloaded/*/; do
+            if [ -d "$dir" ]; then
+              cp -r "$dir"* allure-results/ 2>/dev/null || true
+            fi
+          done
+
+      - name: Download existing allure history
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-history
+          path: allure-history
+        continue-on-error: true
+          
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@master
+        with:
+          allure_results: allure-results
+          allure_report: allure-report
+          gh_pages: gh-pages
+          allure_history: allure-history
+          keep_reports: 20
+
+      - name: Upload updated allure history
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-history
+          path: allure-history
+          retention-days: 30
+   
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.UI_TESTING_GITHUB_TOKEN2 }}
+          publish_dir: allure-history
