--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,18 @@ on:
     branches:
       - main
 
+  workflow_dispatch:   # ✅ allows manual run for staging/prod/dev
+    inputs:
+      environment:
+        description: 'Environment to run tests against'
+        required: true
+        default: 'staging'
+        type: choice
+        options:
+          - development
+          - staging
+          - production
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -24,16 +36,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r torch-requirements.txt
           pip install -r requirements.txt
-          pip install pytest pytest-cov allure-pytest   # ✅ added allure-pytest
+          pip install pytest pytest-cov allure-pytest
 
       - name: Run tests with coverage + Allure
         env:
           PIXABAY_API_KEY: ${{ secrets.PIXABAY_API_KEY }}
+          ENVIRONMENT: ${{ github.event.inputs.environment || 'staging' }}   # ✅ pass env
         run: |
+          echo "Running tests against environment: $ENVIRONMENT"
           pytest --cov=app \
                  --cov-report=term-missing \
                  --cov-report=xml \
-                 --alluredir=allure-results   # ✅ generate allure results
+                 --alluredir=allure-results
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -58,7 +72,7 @@ jobs:
 
   allure-report:
     runs-on: ubuntu-latest
-    needs: test   # ✅ depends on the test job
+    needs: test
     if: always()
 
     steps:
